; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/marvell/mwifiex/extr_pcie.c_mwifiex_pcie_delete_evtbd_ring.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/marvell/mwifiex/extr_pcie.c_mwifiex_pcie_delete_evtbd_ring.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mwifiex_adapter = type { %struct.pcie_service_card* }
%struct.pcie_service_card = type { i32, i64, i32*, i64, i64, i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { %struct.mwifiex_pcie_card_reg* }
%struct.mwifiex_pcie_card_reg = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mwifiex_adapter*)* @mwifiex_pcie_delete_evtbd_ring to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mwifiex_pcie_delete_evtbd_ring(%struct.mwifiex_adapter* %0) #0 {
  %2 = alloca %struct.mwifiex_adapter*, align 8
  %3 = alloca %struct.pcie_service_card*, align 8
  %4 = alloca %struct.mwifiex_pcie_card_reg*, align 8
  store %struct.mwifiex_adapter* %0, %struct.mwifiex_adapter** %2, align 8
  %5 = load %struct.mwifiex_adapter*, %struct.mwifiex_adapter** %2, align 8
  %6 = getelementptr inbounds %struct.mwifiex_adapter, %struct.mwifiex_adapter* %5, i32 0, i32 0
  %7 = load %struct.pcie_service_card*, %struct.pcie_service_card** %6, align 8
  store %struct.pcie_service_card* %7, %struct.pcie_service_card** %3, align 8
  %8 = load %struct.pcie_service_card*, %struct.pcie_service_card** %3, align 8
  %9 = getelementptr inbounds %struct.pcie_service_card, %struct.pcie_service_card* %8, i32 0, i32 6
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load %struct.mwifiex_pcie_card_reg*, %struct.mwifiex_pcie_card_reg** %10, align 8
  store %struct.mwifiex_pcie_card_reg* %11, %struct.mwifiex_pcie_card_reg** %4, align 8
  %12 = load %struct.mwifiex_adapter*, %struct.mwifiex_adapter** %2, align 8
  %13 = call i32 @mwifiex_cleanup_evt_ring(%struct.mwifiex_adapter* %12)
  %14 = load %struct.pcie_service_card*, %struct.pcie_service_card** %3, align 8
  %15 = getelementptr inbounds %struct.pcie_service_card, %struct.pcie_service_card* %14, i32 0, i32 2
  %16 = load i32*, i32** %15, align 8
  %17 = icmp ne i32* %16, null
  br i1 %17, label %18, label %32

18:                                               ; preds = %1
  %19 = load %struct.pcie_service_card*, %struct.pcie_service_card** %3, align 8
  %20 = getelementptr inbounds %struct.pcie_service_card, %struct.pcie_service_card* %19, i32 0, i32 5
  %21 = load i32, i32* %20, align 8
  %22 = load %struct.pcie_service_card*, %struct.pcie_service_card** %3, align 8
  %23 = getelementptr inbounds %struct.pcie_service_card, %struct.pcie_service_card* %22, i32 0, i32 3
  %24 = load i64, i64* %23, align 8
  %25 = load %struct.pcie_service_card*, %struct.pcie_service_card** %3, align 8
  %26 = getelementptr inbounds %struct.pcie_service_card, %struct.pcie_service_card* %25, i32 0, i32 2
  %27 = load i32*, i32** %26, align 8
  %28 = load %struct.pcie_service_card*, %struct.pcie_service_card** %3, align 8
  %29 = getelementptr inbounds %struct.pcie_service_card, %struct.pcie_service_card* %28, i32 0, i32 1
  %30 = load i64, i64* %29, align 8
  %31 = call i32 @pci_free_consistent(i32 %21, i64 %24, i32* %27, i64 %30)
  br label %32

32:                                               ; preds = %18, %1
  %33 = load %struct.pcie_service_card*, %struct.pcie_service_card** %3, align 8
  %34 = getelementptr inbounds %struct.pcie_service_card, %struct.pcie_service_card* %33, i32 0, i32 4
  store i64 0, i64* %34, align 8
  %35 = load %struct.mwifiex_pcie_card_reg*, %struct.mwifiex_pcie_card_reg** %4, align 8
  %36 = getelementptr inbounds %struct.mwifiex_pcie_card_reg, %struct.mwifiex_pcie_card_reg* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 4
  %38 = or i32 0, %37
  %39 = load %struct.pcie_service_card*, %struct.pcie_service_card** %3, align 8
  %40 = getelementptr inbounds %struct.pcie_service_card, %struct.pcie_service_card* %39, i32 0, i32 0
  store i32 %38, i32* %40, align 8
  %41 = load %struct.pcie_service_card*, %struct.pcie_service_card** %3, align 8
  %42 = getelementptr inbounds %struct.pcie_service_card, %struct.pcie_service_card* %41, i32 0, i32 3
  store i64 0, i64* %42, align 8
  %43 = load %struct.pcie_service_card*, %struct.pcie_service_card** %3, align 8
  %44 = getelementptr inbounds %struct.pcie_service_card, %struct.pcie_service_card* %43, i32 0, i32 2
  store i32* null, i32** %44, align 8
  %45 = load %struct.pcie_service_card*, %struct.pcie_service_card** %3, align 8
  %46 = getelementptr inbounds %struct.pcie_service_card, %struct.pcie_service_card* %45, i32 0, i32 1
  store i64 0, i64* %46, align 8
  ret i32 0
}

declare dso_local i32 @mwifiex_cleanup_evt_ring(%struct.mwifiex_adapter*) #1

declare dso_local i32 @pci_free_consistent(i32, i64, i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
